--- a/app/globals.css
+++ b/app/globals.css
@@ -2,38 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
-  padding: 2rem;
-  font-size: 1.3rem;
-  max-width: 48rem;
-  margin: 0 auto;
-}
-
-form {
-  display: flex;
-  margin-bottom: 2rem;
-}
-
-form input {
-  width: 100%;
-  padding: 1rem;
-  border: 1px solid #000;
-  border-radius: 0.25rem;
-  font-size: 1.3rem;
-  margin-right: 1rem;
-}
-
-form button {
-  padding: 1rem;
-  border: none;
-  border-radius: 0.25rem;
+* {
   box-sizing: border-box;
-  cursor: pointer;
-  font-size: 1.3rem;
+  margin: 0;
+  padding: 0;
 }
 
-.imageWrapper {
-  width: 100%;
-  aspect-ratio: 1 / 1;
-  position: relative;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
